syntax = "proto3";
package hashicorp.nomad.plugins.shared.structs;
option go_package = "proto";

// Attribute is used to describe the value of an attribute, optionally
// specifying units
message Attribute {
    oneof value {
      // float_val exposes a floating point value.
      double float_val = 1;

      // int_numerator_val exposes a int value.
      int64 int_val = 2;

      // string_val exposes a string value.
      string string_val = 3;

      // bool_val exposes a boolean statistic. 
      bool bool_val = 4;
    }
      
      // unit gives the unit type: MHz, MB, etc.
      string unit = 5;
}

